tests/NormalTests/paczka1/fuzzy1/44152325.err
Error in line 15: ne68 A258 49,2
Error in line 21: A258 A258 55,2
Error in line 23: A258 A445 23,9
Error in line 33: oy%tTE A527 96,9
Error in line 29: oy8tTE A445 73,5
Error in line 30: A258 A174 84,8
